--- a/popup.html
+++ b/popup.html
@@ -85,6 +85,7 @@
         </div>
 
         <button id="download-btn">Download as .txt</button>
+        <button id="settings-btn" style="margin-top: 10px; background-color: #6c757d;">配置设置</button>
 
         <script src="popup.js"></script>
     </body>
